# latex-table-generation

./: .gitignore  Cargo.toml  README.md  TODO.md  flake.nix  index.html  package-lock.json  package.json  webpack.config.js
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa
site/: index.html  index.js  package-lock.json  package.json
src/: lib.rs  main.rs
src/gui/: mod.rs
src/table/: mod.rs
